--- a/source/slider/content/work-3.html
+++ b/source/slider/content/work-3.html
@@ -1,4 +1,4 @@
-<div class="title-medium title-dashes title-dashes--double">
+<div class="title-medium title-dashes">
     Видео блог LoftBlog
 </div>
 <div class="slider__content-technologies">
