--- a/source/slider/content/work-1.html
+++ b/source/slider/content/work-1.html
@@ -1,4 +1,4 @@
-<div class="title-medium title-dashes title-dashes--double">
+<div class="title-medium title-dashes">
     Сайт школы онлайн Образования
 </div>
 <div class="slider__content-technologies">
